# homework_Docker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  materials_data.json  pyproject.toml  users.json
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
